<resources>
    <string name="app_name">first</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="delete_task">Delete Task</string>
    <string name="update_task">Update Task</string>
    <string name="already_done">Already done?</string>
    <string name="important">Important?</string>
    <string name="night">Night</string>
    <string name="afternoon">Afternoon</string>
    <string name="morning">Morning</string>
    <string name="time_of_day">Time of day:</string>
    <string name="no_date_selected">No date selected</string>
    <string name="select_date">Select Date</string>
    <string name="city">City</string>
    <string name="task_title">Task title</string>
    <string name="delete_task1">Delete Task</string>
    <string name="update_task1">Update Task</string>
    <string name="done">Done?</string>
    <string name="important1">Important?</string>
    <string name="night1">Night</string>
    <string name="afternoon1">Afternoon</string>
    <string name="morning1">Morning</string>
    <string name="time_of_day1">Time of day:</string>
    <string name="no_date_selected1">No date selected</string>
    <string name="select_date1">Select Date</string>
    <string name="city1">City</string>
    <string name="task_title1">Task title</string>
    <string name="login1">Login</string>
    <string name="password1">Password</string>
    <string name="username1">Username</string>
    <string name="logout">Logout</string>
    <string name="add_task">Add Task</string>
    <string name="search">Search...</string>
    <string name="welcome_to_trip_planning_app">Welcome to Trip Planning App!</string>
    <string name="title">Title:</string>
    <string name="city2">City:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="important11">Important?</string>
    <string name="done1">Done?</string>
    <string name="edit_task1">Edit Task</string>
    <string name="delete_task11">Delete Task</string>
    <string name="date_and_time">Date and Time</string>
    <string name="City">City</string>
    <string name="Task_title">Task Title</string>
    <string name="task_Title">Task title</string>
    <string name="city_">City</string>
    <string name="select_Date">Select Date</string>
    <string name="No_date_selected">No date selected</string>
    <string name="Time_of_day">Time of day:</string>
    <string name="Morning">Morning</string>
    <string name="Afternoon">Afternoon</string>
    <string name="Night">Night</string>
    <string name="Done">Done?</string>
    <string name="Important">Important?</string>
    <string name="save_task">Save Task</string>
</resources>