<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgTask"
        android:src="@drawable/ic_task"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"/>

    <TextView android:id="@+id/tvTitle"
        android:text="@string/title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvCity"
        android:text="@string/city2"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvDate"
        android:text="@string/date"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvTime"
        android:text="@string/time"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvImp"
        android:text="@string/important11"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView android:id="@+id/tvDone"
        android:text="@string/done1"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnEdit"
        android:text="@string/edit_task1"
        android:layout_marginTop="20dp"
        android:backgroundTint="#C2A280"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDelete"
        android:text="@string/delete_task11"
        android:backgroundTint="#D9534F"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
