<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogo"
            android:src="@drawable/ic_task"
            android:layout_width="60dp"
            android:layout_height="60dp"/>

        <TextView
            android:id="@+id/tvWelcome"
            android:text="@string/welcome_to_trip_planning_app"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#8C5E3C"
            android:paddingStart="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <EditText
        android:id="@+id/etSearch"
        android:hint="@string/search"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAdd"
        android:text="@string/add_task"
        android:backgroundTint="#C2A280"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTasks"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:backgroundTint="#C2A290"
        android:textColor="#FFFFFF"
        >

        <Button
            android:id="@+id/btnLogout"
            android:text="@string/logout"
            android:backgroundTint="#C2A280"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
